removed some unnecessary print statements

--- a/skiplist_anim.ipynb
+++ b/skiplist_anim.ipynb
@@ -91,7 +91,6 @@
     "    curAction = input('Enter \\'insert\\', \\'delete\\', \\'search\\', or \\'done\\':' )\n",
     "\n",
     "    if curAction == 'insert':\n",
-    "        print('You said insert...')\n",
     "        curInput = input('Enter an integer: ')  # String value from user input\n",
     "        curInt = -1                             # Will be replaced with the value of the integer, if input is valid\n",
     "        try:                                    # Make sure input is valid. Otherwise, start over.\n",
@@ -261,7 +260,7 @@
     "                        viz.display()\n",
     "\n",
     "    elif curAction == 'done':\n",
-    "        print('You said done...')\n",
+    "        pass\n",
     "    else:\n",
     "        print(\"INVALID INPUT! Try again...\")"
    ]
