--- a/rbtree_anim.ipynb
+++ b/rbtree_anim.ipynb
@@ -10,6 +10,8 @@
     "import sys\n",
     "\n",
     "\"\"\"\n",
+    "Follow the instructions in README.md to install the necessary requirements\n",
+    "\n",
     "1. Every node is either red or black.\n",
     "2. The root is black.\n",
     "3. Every leaf (NIL) is black.\n",
@@ -467,7 +469,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -485,7 +487,7 @@
   },
   "vscode": {
    "interpreter": {
-    "hash": "6350718876c452b523959384806aaa75905586631d9d9d6f7a8944facb98c7a3"
+    "hash": "b0fa6594d8f4cbf19f97940f81e996739fb7646882a419484c72d19e05852a7e"
    }
   }
  },
